# growth-mindset

./: main.py  pyproject.toml
src/project01_growth_mindset/: __init__.py
